--- a/backend_sample/package.json
+++ b/backend_sample/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/woongkipark/Portillo#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "pm2": "^5.2.0",
     "sanitize-html": "^2.7.0"
   }
